<resources>
    <string name="app_name">Currency-Converter</string>
    <string name="resultStr">%s</string>
    <string name="amt">Amount</string>
    <string name="norm">0.0</string>
    <string name="Usd">United States Dollars</string>
    <string name="PoundSterling">Pound Sterling</string>
    <string name="Euro">Euro</string>
    <string name="naira">Naira</string>
    <string name="btc">Bitcoin</string>
    <string name="rUp">Round Up</string>
</resources>