<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/backgroundd"
    tools:context=".MainActivity">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/back_ground"
            android:elevation="4dp"
            android:padding="16dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/TLfrom"
                app:layout_constraintEnd_toStartOf="@+id/TLfrom"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/TLfrom">

                <ImageView
                    android:id="@+id/Imgfrom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nairaimg" />
            </androidx.cardview.widget.CardView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TLfrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/amt"
                app:boxStrokeWidthFocused="2dp"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/arrowFrom"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETfrom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/arrowFrom"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/round_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/TLfrom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/TLfrom" />

            <RadioGroup
                android:id="@+id/RG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/back_ground"
                android:backgroundTint="#EDEEF1"
                android:elevation="4dp"
                android:visibility="gone"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TLfrom">
                <RadioButton
                    android:id="@+id/rbNaira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/naira"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbUSD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Usd"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbPounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PoundSterling"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbEuro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Euro"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbBitcoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btc"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RadioGroup>

            <ImageButton
                android:id="@+id/convertImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:src="@drawable/converterimage"
                app:layout_constraintBottom_toTopOf="@+id/greyfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RG"

                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/greyfield"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/greyfield">

                <ImageView
                    android:id="@+id/Imgto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nairaimg" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/greyfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/back_ground2"
                android:backgroundTint="#E9EBF1"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/arrowto"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/TLfrom">

                <TextView
                    android:id="@+id/resultTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/norm"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/arrowto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/round_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/greyfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/greyfield"
                app:layout_constraintTop_toTopOf="@+id/greyfield" />

            <RadioGroup
                android:id="@+id/RG2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/back_ground"
                android:backgroundTint="#EDEEF1"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greyfield">

                <RadioButton
                    android:id="@+id/rbNaira2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/naira"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbUSD2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Usd"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbPounds2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PoundSterling"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbEuro2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Euro"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbBitcoin2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btc"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
               app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/arrowto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rUp"
                app:layout_constraintBottom_toBottomOf="@+id/switchMaterial"
                app:layout_constraintEnd_toStartOf="@+id/switchMaterial"
                app:layout_constraintTop_toTopOf="@+id/switchMaterial" />



        </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>